# IRIS

./: .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE.md  README.md  SECURITY.md  compose.dev.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml  codeql.yml  docs-ci.yml
apps/api/: pyproject.toml
apps/api/src/iris_api/: main.py
apps/workbench/: package.json
apps/worker/: pyproject.toml
config/products/commercial-auto-claims/in/: extraction.yaml  taxonomy.yaml
config/products/commercial-auto-claims/in/prompts/: classify.j2  extract.j2  summarize.j2
config/products/property-fire-claims/in/: extraction.yaml  product.yaml  taxonomy.yaml
docker/: api.Dockerfile  postgres-init.sql  postgres.Dockerfile  worker.Dockerfile
docs/architecture/: architecture.md  iris-architecture.drawio
docs/engineering/: best-practices.md
docs/schemas/: extraction.schema.json  product.schema.json  taxonomy.schema.json
scripts/: check-tasks.py
tasks/: README.md
tasks/001-project-scaffold/: plan.md  spec.md  tasks.md
tasks/002-configuration-framework/: plan.md  spec.md  tasks.md
tasks/003-ocr-adapter-set/: plan.md  spec.md  tasks.md
tasks/003-ocr-adapter-set/contracts/: ocr-engine.md
tasks/004-llm-adapter-set/: plan.md  spec.md  tasks.md
tasks/004-llm-adapter-set/contracts/: llm-provider.md
tasks/005-classification-extraction-agents/: plan.md  spec.md  tasks.md
tests/: README.md
tests/001-project-scaffold/: README.md  test_t001_workspace.py  test_t002_editable_packages.py  test_t003_import_linter.py  test_t004_makefile.py  test_t005_pytest_config.py  test_t006_ruff_mypy.py  test_t007_compose_dev.py
tests/contract/: conftest.py  test_llm_contract.py  test_ocr_contract.py
tests/integration/: conftest.py  test_cli_config.py  test_llm_otel.py  test_llm_routing.py
tools/iris-cli/: pyproject.toml
tools/iris-cli/src/iris_cli/: __init__.py
tools/iris-cli/src/iris_cli/commands/: config.py
tools/iris-cli/tests/: test_config_validate.py
