[project]
name = "iris-workspace"
version = "0.0.0"
description = "IRIS mono-repo workspace root"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/iris-engine",
    "packages/iris-agents",
    "packages/iris-data",
    "packages/iris-config",
    "packages/iris-observability",
    "packages/iris-adapters/*",
    "tools/iris-cli",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "tomli>=2.2",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
