[project]
name = "iris-workspace"
version = "0.0.0"
description = "IRIS mono-repo workspace root"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/iris-engine",
    "packages/iris-agents",
    "packages/iris-data",
    "packages/iris-config",
    "packages/iris-observability",
    "packages/iris-adapters/*",
    "tools/iris-cli",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "import-linter>=2.5",
    "opentelemetry-sdk>=1.20",
    "pyyaml>=6",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6",
    "ruff>=0.7",
    "pre-commit>=4.6.0",
]

[tool.importlinter]
root_packages = [
    "iris_agents",
    "iris_api",
    "iris_cli",
    "iris_config",
    "iris_data",
    "iris_engine",
    "iris_llm_anthropic",
    "iris_adapter_llm_azure_openai",
    "iris_llm_local",
    "iris_adapter_llm_openai",
    "iris_adapter_llm_shared",
    "iris_observability",
    "iris_ocr_adi",
    "iris_ocr_datalab",
    "iris_ocr_local",
    "iris_ocr_paddleocr",
    "iris_worker",
]

[[tool.importlinter.contracts]]
name = "IRIS apps, packages, adapters, engine"
type = "layers"
layers = [
    "iris_api | iris_worker | iris_cli",
    "iris_agents | iris_data | iris_config | iris_observability",
    "iris_ocr_adi | iris_ocr_datalab | iris_ocr_paddleocr | iris_ocr_local | iris_adapter_llm_azure_openai | iris_adapter_llm_openai | iris_llm_anthropic | iris_llm_local",
    "iris_engine",
]

[[tool.importlinter.contracts]]
name = "Adapters do not depend on each other"
type = "independence"
modules = [
    "iris_ocr_adi",
    "iris_ocr_datalab",
    "iris_ocr_paddleocr",
    "iris_ocr_local",
    "iris_adapter_llm_azure_openai",
    "iris_adapter_llm_openai",
    "iris_llm_anthropic",
    "iris_llm_local",
]

[[tool.importlinter.contracts]]
name = "Mid-packages do not import concrete adapters"
type = "forbidden"
source_modules = [
    "iris_agents",
    "iris_data",
    "iris_config",
    "iris_observability",
]
forbidden_modules = [
    "iris_ocr_adi",
    "iris_ocr_datalab",
    "iris_ocr_paddleocr",
    "iris_ocr_local",
    "iris_adapter_llm_azure_openai",
    "iris_adapter_llm_openai",
    "iris_llm_anthropic",
    "iris_llm_local",
]

[[tool.importlinter.contracts]]
name = "Shared LLM base must not import concrete adapters"
type = "forbidden"
source_modules = [
    "iris_adapter_llm_shared",
]
forbidden_modules = [
    "iris_ocr_adi",
    "iris_ocr_datalab",
    "iris_ocr_paddleocr",
    "iris_ocr_local",
    "iris_adapter_llm_azure_openai",
    "iris_adapter_llm_openai",
    "iris_llm_anthropic",
    "iris_llm_local",
]

[tool.pytest.ini_options]
markers = [
    "slow: subprocess or network heavy checks (excluded from default test runs)",
    "contract: parametrised adapter contract suite (tests/contract/)",
    "integration: two or more components together, in-memory adapters (tests/integration/)",
    "e2e: real services, gated on IRIS_E2E_LIVE=1 (tests/e2e/)",
]
addopts = ["--import-mode=importlib", "-m", "not slow and not e2e"]
pythonpath = ["tests/001-project-scaffold"]

[tool.coverage.run]
source = ["iris_engine", "iris_config", "iris_ocr_adi", "iris_ocr_datalab", "iris_ocr_paddleocr", "iris_ocr_local", "iris_adapter_llm_shared", "iris_adapter_llm_azure_openai", "iris_adapter_llm_openai"]
branch = true
omit = ["*/iris_engine/contracts/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "PaddleOCR-VL-1.6-snapshot",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "iris_engine",
    "iris_engine.*",
    "iris_ocr_adi",
    "iris_ocr_adi.*",
    "iris_ocr_datalab",
    "iris_ocr_datalab.*",
    "iris_ocr_paddleocr",
    "iris_ocr_paddleocr.*",
    "iris_ocr_local",
    "iris_ocr_local.*",
    "iris_adapter_llm_azure_openai",
    "iris_adapter_llm_azure_openai.*",
    "iris_adapter_llm_openai",
    "iris_adapter_llm_openai.*",
    "iris_llm_anthropic",
    "iris_llm_anthropic.*",
    "iris_llm_local",
    "iris_llm_local.*",
]
strict = true

[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
