[project]
name = "iris-cli"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8",
    "iris-config",
]

[tool.uv.sources]
iris-config = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iris_cli"]
